# devflow

./: .gitignore  CLAUDE.md  LICENSE  README.md  SKILL.md  pyproject.toml
.devflow/: config.toml
.devflow/prompts/: brainstorm.md  implement-tdd.md
.devflow/workflows/: MODE-A.toml
docs/completion/: COMPLETION-5d823903.md  COMPLETION-ca2dba44.md
docs/evidence/: EVIDENCE-5d823903.md  EVIDENCE-ca2dba44.md
docs/features/: FEAT-5d823903.md  FEAT-ca2dba44.md
docs/requirements/: REQ-001.md  REQ-5d823903.md  REQ-ca2dba44.md
docs/superpowers/plans/: PLAN-5d823903.md  PLAN-ca2dba44.md
docs/superpowers/specs/: DESIGN-5d823903.md  DESIGN-ca2dba44.md  DESIGN-ralph-loop.md
scripts/: release.py
skills/devflow/: SKILL.md
skills/devflow/templates/: AGENTS.md  CLI.md  REQUIREMENTS.md  WORKFLOW.md
skills/devflow/templates/requirements/: TEMPLATE.md
src/devflow/: __init__.py  __main__.py  agent_runner.py  backlog.py  cli.py  config.py  feat_cmd.py  gate_checker.py  init_cmd.py  loop_engine.py  progress.py  req_cmd.py  state_store.py  status_cmd.py  task_cmd.py  template.py  vcs.py  workflow_engine.py  workflow_parser.py
src/devflow/data/: __init__.py
src/devflow/data/prompts/: brainstorm.md  implement-sdd.md
src/devflow/skills/devflow/templates/: AGENTS.md  CLI.md  README.md  REQUIREMENTS.md  SKILL.md
src/devflow/skills/devflow/templates/features/: TEMPLATE.md
src/devflow/templates/: SKILL.md
tests/: test_agent_runner.py  test_backlog.py  test_cli.py  test_config.py  test_gate_checker.py  test_loop_engine.py  test_progress.py  test_state_store.py  test_vcs.py  test_workflow_engine.py  test_workflow_parser.py
tests/e2e/: test_kimi_buckshot.py  test_kimi_usability.py
tests/integration/: test_integration_placeholder.py
tests/unit/: test_unit_placeholder.py
