[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devflow"
version = "0.1.0"
description = "AI Agent Development Workflow CLI - Universal version"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DevFlow Contributors"}
]
keywords = ["workflow", "ai", "agent", "development", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "click>=8.0.0",
    "toml>=0.10.2",
    "Jinja2>=3.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
devflow = "devflow.cli:main"

[project.urls]
Homepage = "https://github.com/devflow/devflow"
Documentation = "https://github.com/devflow/devflow#readme"
Repository = "https://github.com/devflow/devflow"

[tool.hatch.build.targets.wheel]
packages = ["src/devflow"]

[tool.hatch.build.targets.wheel.shared-data]
"src/devflow/data" = "devflow/data"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "W", "C90"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
